great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */
/* Navigation section*/
nav {
    text-align: center;
}
nav a {
    color:gray;
    text-decoration: none;
    display: inline-block;
    width: 12.5%;
    margin: 0 auto;
    height:38px;    
}
/* Header and Large img */
header {
    display: inline-block;
    width: 100%;
    margin: 0 auto;
}
h1 {
    display: inline-block;
    width: 50%;
    font-size: 70px;   
}
.title img{
    display: inline-block;
    width:50%;
    margin: 0 auto;
}
/* features and about */
section:first-of-type {
    width: 100%;
}
section:first-of-type div {
    display: inline-block;
    width:49%;
    margin: 0 auto;
}
/* middle banner */
.middle-img {
    margin: 5% 0;
    width: 100%;
}
/* services product and vision */
section:last-of-type div {
    display: inline-block;
    width:31%;
    margin: 0 10px 0 auto;
}
.contact {
    text-justify: left;
}
footer {
    margin: 5% 0;
    text-align: center;
}

